<resources>
    <string name="app_name">Smarty Home</string>
    <string name="continue_btn">Continue</string>
    <string name="your_name">Your Name</string>
    <string name="welcome_home">Welcome Home</string>
    <string name="smarty">Smarty</string>
    <string name="content_description">content description</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
</resources>