<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bright">

    <ImageView
        android:id="@+id/image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_home"
        app:layout_constraintBottom_toTopOf="@id/smarty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/content_description" />

    <TextView
        android:id="@+id/smarty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/smarty"
        android:textColor="@color/dark"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@id/welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_home"
        android:textColor="@color/gray"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@id/name_edittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/smarty" />

    <EditText
        android:id="@+id/name_edittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="100dp"
        android:background="@drawable/edittxt_frame"
        android:hint="@string/your_name"
        android:padding="15dp"
        android:textAlignment="center"
        android:textColorHint="@color/gray"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/continue_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome"
        android:importantForAutofill="no"
        android:inputType="textPersonName" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/continue_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:padding="20dp"
        android:text="@string/continue_btn"
        android:textColor="@color/bright"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_edittext" />

</androidx.constraintlayout.widget.ConstraintLayout>